# Breakout

./: CMakeLists.txt
include/: ball_object_collisions.hpp  game.hpp  game_level.hpp  game_object.hpp  resource_manager.hpp  shader.hpp  sprite_renderer.hpp  texture.hpp
src/: ball_object_collisions.cpp  game.cpp  game_level.cpp  game_object.cpp  main.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
